Started implementation of side navigation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,10 +21,20 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:support-annotations:27.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile 'com.aurelhubert:ahbottomnavigation:2.1.0'
+    implementation("com.mikepenz:materialdrawer:6.0.1@aar") {
+        transitive = true
+    }
+
+    implementation 'com.android.support:recyclerview-v7:26.1.0';
+    implementation 'com.android.support:design:26.1.0';
+
+    implementation "com.mikepenz:iconics-core:2.9.5@aar"
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.2@aar'
 }
