--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,6 @@ dependencies {
 
     implementation "com.mikepenz:iconics-core:2.9.5@aar"
     implementation 'com.mikepenz:fontawesome-typeface:4.7.0.2@aar'
+
+    compile 'com.q42:qlassified:0.1.1'
 }
